sql/item.h
@@ -164,6 +164,12 @@ public:
       default: return "UNKNOWN";
     }
   }
+  int sortcmp(const String *s, const String *t) const
+  {
+    return collation->coll->strnncollsp(collation,
+                                        (uchar *) s->ptr(), s->length(),
+                                        (uchar *) t->ptr(), t->length(), 0);
+  }
 };
 
 /*************************************************************************/
